tests/NormalTests/paczka1/fuzzy1/77104664.err
Error in line 2: KiABfT7C A113 70,8
Error in line 8: A414 A782 82,4
Error in line 11: KiABfT7C A782 58,5
Error in line 16: KiABfT7C A414 42,4
Error in line 19: KiABfT7C S903 29,5
Error in line 22: KiABfT7C A782 72,2
Error in line 30: gczyuWmlfSn A113 17,3
